[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-toolkit"
version = "0.1.0"
description = "A framework-agnostic toolkit for building AI agents"
readme = "README.md"
authors = [
    {name = "Moses-main", email = "moses@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = ["ai_agent", "ai_agent.tools"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
